--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
 {
   "name": "celo-staking",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@celo/contractkit": "^7.2.0",
+    "@dfinity/agent": "^1.0.1",
+    "@dfinity/candid": "^1.0.1",
+    "@dfinity/identity": "^1.0.1",
+    "@dfinity/principal": "^1.0.1",
+    "@dfinity/utils": "^2.1.2",
+    "@tanstack/react-query": "^5.25.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.47.0",
+    "bignumber.js": "^9.1.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-spinners": "^0.13.8",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.10.0",
+    "web3-providers-http": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.4.1"
   }
 }
