--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@dfinity/identity": "^1.0.1",
     "@dfinity/principal": "^1.0.1",
     "@dfinity/utils": "^2.1.2",
+    "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.25.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
