--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "apexcharts": "^3.47.0",
     "bignumber.js": "^9.1.2",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
