--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "celo-staking",
   "version": "0.1.0",
+  "homepage": "http://sam-the-tutor.github.io/CeloVest",
   "dependencies": {
     "@celo/contractkit": "^7.2.0",
     "@dfinity/agent": "^1.0.1",
@@ -32,6 +33,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d run build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
@@ -54,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.1"
