--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@dfinity/principal": "^1.0.1",
     "@dfinity/utils": "^2.1.2",
     "@heroicons/react": "^2.1.1",
-    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query": "^5.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,12 +20,14 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
+    "react-datepicker": "^7.1.0",
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "viem": "^2.16.1",
     "web-vitals": "^2.1.4",
     "web3": "^1.10.0",
     "web3-providers-http": "^4.1.0",
@@ -33,8 +35,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d run build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
