--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "celo-staking",
+  "name": "miSAFE",
   "version": "0.1.0",
   "homepage": "http://sam-the-tutor.github.io/CeloVest",
   "dependencies": {
