--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
@@ -26,6 +27,9 @@
     "web3": "^1.10.0",
     "web3-providers-http": "^4.1.0",
     "yup": "^1.4.0"
+  },
+  "overrides": {
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
